--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
           <tr>
             <td>1</td>
             <td>Variables</td>
-            <td><a href=""></a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/variables.js" target="_blank">JavaScript Variables Code</a></td>
           </tr>
           <tr>
             <td>2</td>
             <td>Datatypes</td>
-            <td><a href=""></a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/datatypes.js" target="_blank">JavaScipt Datatypes Code</a></td>
           </tr>
         </table>
       </div>
