--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
             <td>Datatypes</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/datatypes.js" target="_blank">JavaScipt Datatypes Code</a></td>
           </tr>
+          <tr>
+            <td>3</td>
+            <td>Objects</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/objects.js" target="_blank">JavaScipt Datatypes Code</a></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Arrays</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arrays.js" target="_blank">JavaScipt Datatypes Code</a></td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Functions</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/functions.js" target="_blank">JavaScipt Datatypes Code</a></td>
+          </tr>
         </table>
       </div>
     </div>
