--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
           <tr>
             <td>3</td>
             <td>Objects</td>
-            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/objects.js" target="_blank">JavaScipt Datatypes Code</a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/objects.js" target="_blank">JavaScipt Objects Code</a></td>
           </tr>
           <tr>
             <td>4</td>
             <td>Arrays</td>
-            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arrays.js" target="_blank">JavaScipt Datatypes Code</a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arrays.js" target="_blank">JavaScipt Arrays Code</a></td>
           </tr>
           <tr>
             <td>5</td>
             <td>Functions</td>
-            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/functions.js" target="_blank">JavaScipt Datatypes Code</a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/functions.js" target="_blank">JavaScipt Functions Code</a></td>
           </tr>
         </table>
       </div>
