--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             <td>Functions</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/functions.js" target="_blank">JavaScipt Functions Code</a></td>
           </tr>
+          <tr>
+            <td>6</td>
+            <td>Operators</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/operators.js" target="_blank">JavaScipt Operators Code</a></td>
+          </tr>
         </table>
       </div>
     </div>
