learn conditional statements and task completed

--- a/JS Course/index.html
+++ b/JS Course/index.html
@@ -16,6 +16,6 @@
     </script> -->
 
     <!-- External JS -->
-    <script src="./assets/js/operators.js"></script>
+    <script src="./assets/js/task.js"></script>
   </body>
 </html>
