--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             <td>Operators</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/operators.js" target="_blank">JavaScipt Operators Code</a></td>
           </tr>
+          <tr>
+            <td>7</td>
+            <td>Conditional Statements</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/conditionalstatements.js" target="_blank">JavaScipt Operators Code</a></td>
+          </tr>
         </table>
       </div>
     </div>
