--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <!-- header -->
       <div class="header">
-        <h1>JavaScript Topics</h1>
+        <h1>JavaScript Course</h1>
         <a
           href="https://github.com/er-arunkumarselvam/JavaScript-Course"
           target="_blank"
@@ -27,7 +27,14 @@
             /></svg><span>Github</span></a
         >
       </div>
-      <div class="topic-content">
+      <!-- Topics -->
+      <div class="menu">
+        <ul class="menu-item">
+          <li class="menu-list"><a href="./index.html" class="menu-link active">JS Topics</a></li>
+          <li class="menu-list"><a href="./task.html" class="menu-link">JS Tasks</a></li>
+        </ul>
+      </div>
+      <div class="topic-content" id="topic-content">
         <table>
           <thead>
             <th>S.No</th>
