--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
           <tr>
             <td>7</td>
             <td>Conditional Statements</td>
-            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/conditionalstatements.js" target="_blank">JavaScipt Operators Code</a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/conditionalstatements.js" target="_blank">JavaScipt Conditional Statement Code</a></td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>Loops</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/Loops.js" target="_blank">JavaScipt Loops Code</a></td>
           </tr>
         </table>
       </div>
