--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Course</title>
+    <title>JS Course | JS Topics</title>
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -43,43 +43,48 @@
           </thead>
           <tr>
             <td>1</td>
-            <td>Variables</td>
+            <td title="var, let, const">Variables</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/variables.js" target="_blank">JavaScript Variables Code</a></td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Datatypes</td>
+            <td title="Primitive types">Datatypes</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/datatypes.js" target="_blank">JavaScipt Datatypes Code</a></td>
           </tr>
           <tr>
             <td>3</td>
-            <td>Objects</td>
+            <td title="Object Creations">Objects</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/objects.js" target="_blank">JavaScipt Objects Code</a></td>
           </tr>
           <tr>
             <td>4</td>
-            <td>Arrays</td>
+            <td title="Arrary Creations">Arrays</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arrays.js" target="_blank">JavaScipt Arrays Code</a></td>
           </tr>
           <tr>
             <td>5</td>
-            <td>Functions</td>
+            <td title="Function Declaration, Function Calling">Functions</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/functions.js" target="_blank">JavaScipt Functions Code</a></td>
           </tr>
           <tr>
             <td>6</td>
-            <td>Operators</td>
+            <td title="Arithmatic, Assignment, Relational, Equatity, Logical, Ternary, Bitwise, Logical Non boolean, Short Circuiting">Operators</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/operators.js" target="_blank">JavaScipt Operators Code</a></td>
           </tr>
           <tr>
             <td>7</td>
-            <td>Conditional Statements</td>
+            <td title="If-else, else if, nested if, switch case">Conditional Statements</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/conditionalstatements.js" target="_blank">JavaScipt Conditional Statement Code</a></td>
           </tr>
           <tr>
             <td>8</td>
-            <td>Loops</td>
+            <td title="for, while, do-while, for-in, for-of">Loops</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/loops.js" target="_blank">JavaScipt Loops Code</a></td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td title="OOps object, Factory Function, Constructor Function">Objects & Functions</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/OOps_objects.js" target="_blank">JavaScipt Objects & Functions Code</a></td>
           </tr>
         </table>
       </div>
