Learn Dynamic Objects

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </tr>
           <tr>
             <td>9</td>
-            <td title="OOps object, Factory Function, Constructor Function">Objects & Functions</td>
+            <td title="OOps object, Factory Function, Constructor Function, Dynamic Object">Objects & Functions</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/OOps_objects.js" target="_blank">JavaScipt Objects & Functions Code</a></td>
           </tr>
         </table>
