Learn Constructor Property, Functions are Objects and Primitives vs Reference Value

--- a/JS Course/index.html
+++ b/JS Course/index.html
@@ -16,6 +16,6 @@
     </script> -->
 
     <!-- External JS -->
-    <script src="./assets/js/OOps_objects.js"></script>
+    <script src="./assets/js/primitivesandreferencevalue.js"></script>
   </body>
 </html>
