--- a/index.html
+++ b/index.html
@@ -83,8 +83,13 @@
           </tr>
           <tr>
             <td>9</td>
-            <td title="OOps object, Factory Function, Constructor Function, Dynamic Object">Objects & Functions</td>
+            <td title="OOps object, Factory Function, Constructor Function, Dynamic Object, Constructor Property, Functions are Objects">Objects & Functions</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/OOps_objects.js" target="_blank">JavaScipt Objects & Functions Code</a></td>
+          </tr>
+           <tr>
+            <td>10</td>
+            <td title="Primitive Values, Reference Values">Primitive vs Reference Value</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/primitivesandreferencevalue.js" target="_blank">JavaScipt Primitives vs Reference Value Code</a></td>
           </tr>
         </table>
       </div>
