Enumerating properties of an objects, Object cloning, Garbage collections

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             <td title="Primitive Values, Reference Values">Primitive vs Reference Value</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/primitivesandreferencevalue.js" target="_blank">JavaScipt Primitives vs Reference Value Code</a></td>
           </tr>
+          <tr>
+            <td>11</td>
+            <td title="Enumerating Properties of an Object, Object Cloning, Garbage Collection">Object Details</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/objectdetailing.js" target="_blank">JavaScipt Object Details Value Code</a></td>
+          </tr>
         </table>
       </div>
     </div>
