--- a/task.html
+++ b/task.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Course</title>
+    <title>JS Course | JS Tasks</title>
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
