--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <tr>
             <td>11</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/objectdetailing.js" target="_blank">Object Details</a></td>
-             <td>Enumerating Properties of an Object, Object Cloning, Garbage Collection</td>
+             <td>Enumerating Properties of an Object, Object Cloning, Garbage Collections</td>
           </tr>
           <tr>
             <td>12</td>
