--- a/task.html
+++ b/task.html
@@ -45,7 +45,7 @@
           </thead>
           <tr>
             <td>1</td>
-            <td>Mobile Suggestion</td>
+            <td>Mobile Suggestions</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/conditionalstatements.js" target="_blank" title="If, ElseIf, Switch Case">Conditional Statement</a></td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/tasks/task1.js" target="_blank">Mobile Suggestion Task Code</a></td>
           </tr>
