learn Template Literals and Date()

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/inbuiltobjects.js" target="_blank">Inbuilt Objects</a></td>
              <td>Math Objects, String Objects</td>
           </tr>
+          <tr>
+            <td>13</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/templateliterals.js" target="_blank">Template Literals</a></td>
+             <td>Template Literals, Escape Notations</td>
+          </tr>
         </table>
       </div>
     </div>
