--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
            <tr>
             <td>10</td>
             
-            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/primitivesandreferencevalue.js" target="_blank">JavaScipt Primitives vs Reference Value </a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/primitivesandreferencevalue.js" target="_blank">Primitives vs Reference Value </a></td>
             <td >Primitive vs Reference Value</td>
           </tr>
           <tr>
