learn array element adding and finding

--- a/JS Course/index.html
+++ b/JS Course/index.html
@@ -16,6 +16,6 @@
     </script> -->
 
     <!-- External JS -->
-    <script src="./assets/js/inbuiltobjects.js"></script>
+    <script src="./assets/js/arraydetails.js"></script>
   </body>
 </html>
