--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/templateliterals.js" target="_blank">Template Literals</a></td>
              <td>Template Literals, Escape Notations</td>
           </tr>
+          <tr>
+            <td>14</td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/templateliterals.js" target="_blank">Array Details</a></td>
+             <td>Adding element, Finding element</td>
+          </tr>
         </table>
       </div>
     </div>
