--- a/task.html
+++ b/task.html
@@ -52,7 +52,7 @@
           <tr>
             <td>2</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/tasks/task2.js" target="_blank">Vegetable List Checking</a></td>
-            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arraydetails.js" target="_blank" title="Adding Array Elements, Finding Array Elements">Arrays</a></td>
+            <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arraydetails.js" target="_blank" title="Adding Array Element, Finding Array Element">Arrays</a></td>
             
           </tr>
         </table>
