--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <tr>
             <td>14</td>
             <td><a href="https://github.com/er-arunkumarselvam/JavaScript-Course/blob/main/JS%20Course/assets/js/arraydetails.js" target="_blank">Array Details</a></td>
-             <td>Adding element, Finding element</td>
+             <td>Adding element, Finding element, Arrow Function, Removing element, Emptying element</td>
           </tr>
         </table>
       </div>
